[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "3.0", features = ["derive"] }
flate2 = "1.0.34"
sha1 = "0.10.6"
thiserror = "1.0.38"                             # error handling
hex = "0.4"

chrono = "0.4"

reqwest = { version = "0.11", features = ["blocking"] }

regex = "1"
